fix: Change labels format to array syntax for Kestra compatibility
- Changed labels from object format to array of key-value pairs
- Fixes 'Incorrect type. Expected array' validation error
- Compatible with newer Kestra schema requirements

--- a/linkedin-content-generator.yml
+++ b/linkedin-content-generator.yml
@@ -12,8 +12,10 @@ description: |
   - Google Sheets for theme tracking
 
 labels:
-  project: linkedin-automation
-  owner: guilherme
+  - key: project
+    value: linkedin-automation
+  - key: owner
+    value: guilherme
 
 triggers:
   - id: schedule_9am
