fix: Enable namespaceFiles for Python tasks to access cloned repo
- Added namespaceFiles.enabled: true to all Python tasks
- Fixes 'requirements.txt not found' error in Docker containers
- Ensures cloned repository files are accessible in isolated containers

--- a/linkedin-content-generator.yml
+++ b/linkedin-content-generator.yml
@@ -44,6 +44,8 @@ tasks:
   # Step 2: Setup Python Environment
   - id: setup_env
     type: io.kestra.plugin.scripts.python.Commands
+    namespaceFiles:
+      enabled: true
     commands:
       - pip install --upgrade pip
       - pip install -r requirements.txt
@@ -53,6 +55,8 @@ tasks:
   # Step 3: Generate Content with AI Agent
   - id: generate_content
     type: io.kestra.plugin.scripts.python.Script
+    namespaceFiles:
+      enabled: true
     script: |
       import sys
       sys.path.insert(0, 'scripts')
@@ -70,6 +74,8 @@ tasks:
   # Step 4: Generate Image (May fail due to safety filters)
   - id: generate_image
     type: io.kestra.plugin.scripts.python.Script
+    namespaceFiles:
+      enabled: true
     allowFailure: true  # Continue even if image generation fails
     script: |
       import sys
@@ -89,6 +95,8 @@ tasks:
   # Step 5: Publish to LinkedIn
   - id: publish_to_linkedin
     type: io.kestra.plugin.scripts.python.Script
+    namespaceFiles:
+      enabled: true
     script: |
       import sys
       sys.path.insert(0, 'scripts')
