--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,21 @@
+# LangChain and AI Libraries
+langchain>=0.1.0
+langchain-google-genai>=1.0.0
+langchain-community>=0.0.20
+
+# Google APIs
+google-generativeai>=0.3.0
+google-auth>=2.23.0
+google-auth-oauthlib>=1.1.0
+google-auth-httplib2>=0.1.1
+google-api-python-client>=2.108.0
+
+# HTTP and Requests
+requests>=2.31.0
+
+# Image Processing
+Pillow>=10.0.0
+
+# Testing (for development)
 pytest>=7.4.0
 pytest-mock>=3.12.0
