feat: Update schedule to run twice daily on weekdays
- Morning execution: 9 AM (MON-FRI)
- Afternoon execution: 4 PM (MON-FRI)
- Removed 5 PM schedule
- Added timezone: America/Sao_Paulo

--- a/linkedin-content-generator.yml
+++ b/linkedin-content-generator.yml
@@ -18,19 +18,15 @@ labels:
     value: guilherme
 
 triggers:
-  - id: schedule_9am
+  - id: schedule_morning
     type: io.kestra.plugin.core.trigger.Schedule
-    cron: "0 9 * * *"
+    cron: "0 9 * * MON-FRI"
     timezone: America/Sao_Paulo
     
-  - id: schedule_2pm
+  - id: schedule_afternoon
     type: io.kestra.plugin.core.trigger.Schedule
-    cron: "0 14 * * *"
+    cron: "0 16 * * MON-FRI"
     timezone: America/Sao_Paulo
-    
-  - id: schedule_5pm
-    type: io.kestra.plugin.core.trigger.Schedule
-    cron: "0 17 * * *"
     timezone: America/Sao_Paulo
     disabled: true  # Disabled as per original workflow
 
