--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ langchain-community>=0.0.20
 
 # Google APIs
 google-generativeai>=0.3.0
+google-genai>=1.0.0
 google-auth>=2.23.0
 google-auth-oauthlib>=1.1.0
 google-auth-httplib2>=0.1.1
