--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,9 @@ google-auth-oauthlib>=1.1.0
 google-auth-httplib2>=0.1.1
 google-api-python-client>=2.108.0
 
+# OpenAI
+openai>=1.0.0
+
 # HTTP and Requests
 requests>=2.31.0
 
