fix: Attach image to LinkedIn posts
- Added linkedin_image.png to inputFiles in the Kestra workflow
- Updated linkedin_publisher.py to read image from file instead of JSON
- Publisher now converts image file to base64 for LinkedIn upload
- This fixes the issue where images were generated but not uploaded

--- a/linkedin-content-generator.yml
+++ b/linkedin-content-generator.yml
@@ -99,6 +99,7 @@ tasks:
         inputFiles:
           # Use image task output if available, otherwise use content task output
           linkedin_post.json: "{{ outputs.generate_image.outputFiles['linkedin_post.json'] ?? outputs.generate_content.outputFiles['linkedin_post.json'] }}"
+          linkedin_image.png: "{{ outputs.generate_image.outputFiles['linkedin_image.png'] }}"
         script: |
           import sys
           sys.path.insert(0, 'scripts')
