--- a/linkedin-content-generator.yml
+++ b/linkedin-content-generator.yml
@@ -99,7 +99,8 @@ tasks:
         inputFiles:
           # Use image task output if available, otherwise use content task output
           linkedin_post.json: "{{ outputs.generate_image.outputFiles['linkedin_post.json'] ?? outputs.generate_content.outputFiles['linkedin_post.json'] }}"
-          linkedin_image.png: "{{ outputs.generate_image.outputFiles['linkedin_image.png'] }}"
+          # Note: linkedin_image.png is NOT in inputFiles - publisher will check if it exists in workingDir
+        workingDir: "{{ outputs.clone_repo.outputFiles }}"
         script: |
           import sys
           sys.path.insert(0, 'scripts')
