fix: Properly handle image generation failures
- Removed invalid workingDir property from YAML (not supported)
- Image generator now creates empty placeholder file when generation fails
- This prevents Kestra workflow from breaking on missing file
- Publisher checks file size before loading (skips empty placeholders)
- Workflow now gracefully handles OpenAI billing limits
- Posts will be published without images when generation fails

--- a/linkedin-content-generator.yml
+++ b/linkedin-content-generator.yml
@@ -97,10 +97,8 @@ tasks:
         beforeCommands:
           - pip install --no-cache-dir -r requirements.txt
         inputFiles:
-          # Use image task output if available, otherwise use content task output
           linkedin_post.json: "{{ outputs.generate_image.outputFiles['linkedin_post.json'] ?? outputs.generate_content.outputFiles['linkedin_post.json'] }}"
-          # Note: linkedin_image.png is NOT in inputFiles - publisher will check if it exists in workingDir
-        workingDir: "{{ outputs.clone_repo.outputFiles }}"
+          linkedin_image.png: "{{ outputs.generate_image.outputFiles['linkedin_image.png'] }}"
         script: |
           import sys
           sys.path.insert(0, 'scripts')
